--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
+/*
 .App {
     text-align: center;
 }
 
 .App-logo {
-    height: 40vmin;
-    pointer-events: none;
+height: 40vmin;
+pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -24,6 +25,7 @@
     color: white;
 }
 
+
 .App-link {
     color: #61dafb;
 }
@@ -36,3 +38,4 @@
         transform: rotate(360deg);
     }
 }
+*/
